@@ -1,49 +1,44 @@
 package dev.paulsoporan.pingnametags.mixin;
 
-import com.mojang.authlib.GameProfile;
 import dev.paulsoporan.pingnametags.colors.PingColors;
 import dev.paulsoporan.pingnametags.config.PingNametagsConfig;
 import dev.paulsoporan.pingnametags.config.PingNametagsConfigManager;
 import net.minecraft.client.MinecraftClient;
-import net.minecraft.client.network.AbstractClientPlayerEntity;
 import net.minecraft.client.network.PlayerListEntry;
 import net.minecraft.client.render.entity.EntityRenderer;
-import net.minecraft.entity.Entity;
+import net.minecraft.client.render.entity.state.EntityRenderState;
+import net.minecraft.client.render.entity.state.PlayerEntityRenderState;
 import net.minecraft.text.MutableText;
 import net.minecraft.text.Style;
 import net.minecraft.text.Text;
-import net.minecraft.client.util.math.MatrixStack;
-import net.minecraft.client.render.VertexConsumerProvider;
 import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.ModifyArgs;
 import org.spongepowered.asm.mixin.injection.invoke.arg.Args;
 import oshi.util.tuples.Pair;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 @Mixin(EntityRenderer.class)
-public class PingNametagsRenderMixin {
-    @ModifyArgs(method = "render", at = @At(value = "INVOKE", target = "Lnet/minecraft/client/render/entity/EntityRenderer;renderLabelIfPresent(Lnet/minecraft/entity/Entity;Lnet/minecraft/text/Text;Lnet/minecraft/client/util/math/MatrixStack;Lnet/minecraft/client/render/VertexConsumerProvider;IF)V"))
+public class PingNametagsRenderMixin<S extends EntityRenderState> {
+    @ModifyArgs(method = "render", at = @At(value = "INVOKE", target = "Lnet/minecraft/client/render/entity/EntityRenderer;renderLabelIfPresent(Lnet/minecraft/client/render/entity/state/EntityRenderState;Lnet/minecraft/text/Text;Lnet/minecraft/client/util/math/MatrixStack;Lnet/minecraft/client/render/VertexConsumerProvider;I)V"))
     private void renderLabelIfPresent(Args args) {
         PingNametagsConfig config = PingNametagsConfigManager.getConfig();
-        if (!config.getEnabled()) {
-            return;
-        }
-
-        Entity entity = args.get(0);
-        if (!(entity instanceof AbstractClientPlayerEntity abstractClientPlayerEntity)) {
-            return;
-        }
-
-        GameProfile gameProfile = abstractClientPlayerEntity.getGameProfile();
-        String playerName = gameProfile.getName();
-        UUID id = gameProfile.getId();
-
         MinecraftClient client = MinecraftClient.getInstance();
+        if (!config.getEnabled() || client.getNetworkHandler() == null || client.world == null) {
+            return;
+        }
+
+        S state = args.get(0);
+        if (!(state instanceof PlayerEntityRenderState playerState)) {
+            return;
+        }
+
+        Text text = args.get(1);
+        String playerName = text.getString();
+        UUID id = client.world.getEntityById(playerState.id).getUuid();
+
         Collection<PlayerListEntry> playerList = client.getNetworkHandler().getPlayerList();
 
         Optional<PlayerListEntry> exactMatchEntry = playerList.stream()
@@ -64,7 +59,7 @@ public class PingNametagsRenderMixin {
 
         PlayerListEntry selectedEntry;
         if (fakeEntries.size() == 1) {
-            selectedEntry = fakeEntries.get(0);
+            selectedEntry = fakeEntries.getFirst();
         } else {
             if (exactMatchEntry.isEmpty()) {
                 return;
@@ -74,8 +69,6 @@ public class PingNametagsRenderMixin {
         }
 
         int latency = selectedEntry.getLatency();
-
-        Text text = args.get(1);
 
         MutableText latencyText = Text.literal(String.format(config.getPingTextFormatString(), latency))
                 .setStyle(Style.EMPTY.withColor(PingColors.getColor(latency)));
@@ -93,6 +86,7 @@ public class PingNametagsRenderMixin {
         args.set(1, newText);
     }
 
+    @Unique
     private String collectText(Text text) {
         return text.getString().concat(String.join("", text.getSiblings().stream().map(this::collectText).toList()));
     }
